<resources>
    <string name="app_name">NextCourse</string>
    <string name="sign_in">Sign_In</string>
    <string name="forgot_password_msg">Don\'t worry! it happens. Please enter the email address associated with your account.</string>
    <string name="on_submit_msg">Check out your mailbox, you will receive an email containing link where you can reset your password</string>
    <string name="top_right">TopRight</string>
    <string name="bottom_left">BottomLeft</string>
    <string name="welcome">welcome</string>
    <string name="start">startBtn</string>

    <string name="default_web_client_id"></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="saving">Saving...</string>
    <string name="btn">btn</string>
    <string name="save">Save</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_section">Enter Section</string>
    <string name="enter_class_name">Enter Class Name</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="createClass">Create Class</string>
    <string name="uploadContent">Upload Content</string>
    <string name="books">books</string>
    <string name="book_bg">book_bg</string>
    <string name="classtitle">Classtitle</string>
    <string name="filename">Filename</string>
    <string name="classes">\u00A0Classes\u00A0</string>
    <string name="Content">Content</string>
    <string name="section">S</string>
    <string name="subject">Subject</string>
    <string name="date">Date</string>
    <string name="add_class">add_class</string>
    <string name="file_selected">File Selected..</string>
    <string name="join_class">Join Class</string>
    <string name="create_class">Create Class</string>
    <string name="sign_out">Sign Out</string>
    <string name="join">Join</string>
    <string name="welcome_user">Hi, %1$s</string>
    <string name="welcome_anonymous">Hi, Anonymous</string>
    <string name="current_signIn">You\'re are signed in as</string>
    <string name="userImage">User Image</string>
    <string name="instruction">Ask your teacher for class code, then enter it here.</string>
    <string name="class_code">Class Code</string>
    <string name="empty"> - </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="assigner">(Assigner)</string>
    <string name="nullStr" />
    <string name="creator">(Creator)</string>
    <string name="announceOptions">Options</string>
    <string name="announcement">Announcement</string>
    <string name="announcements">Announcements</string>
    <string name="announce_desc">Description</string>
    <string name="descOptions">Description Options</string>
    <string name="added_on">Added on : %1$s</string>
    <string name="heading">Heading</string>
    <string name="attachments">Attachments / Add Work</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="add">Add</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="cancel">Cancel</string>
    <string name="unenrol">Unenrol</string>
    <string name="important">Mark as Important</string>
    <string name="getStarted">Add a class to get started..</string>
    <string name="emptyimage">emptyImage</string>
    <string name="noAnnouncement">No Announcements Yet..</string>
    <string name="uploadFile">Add Attachment / Upload Work..</string>
    <string name="your_name">Enter Your Name</string>
    <string name="unimp">Unmark as Important</string>
    <string name="open">Announcements</string>
    <string name="updateContent">Update Content</string>
</resources>
