<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="93dp"
    android:layout_marginTop="5dp"
    android:layout_marginStart="13dp"
    android:layout_marginEnd="13dp"
    android:background="@drawable/list_bg_1"
    android:layout_marginBottom="12dp">


    <ImageView
        android:id="@+id/ImageBehind"
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/book_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/book_bg1" />

    <ImageView
        android:id="@+id/ImageAhead"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/books"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/book1" />

    <TextView
        android:id="@+id/Classtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/classtitle"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/ImageAhead"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/section"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/Classtitle"
        app:layout_constraintStart_toEndOf="@+id/Classtitle"
        app:layout_constraintTop_toTopOf="@+id/Classtitle"
        />

    <TextView
        android:id="@+id/Subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/Classtitle"
        app:layout_constraintTop_toBottomOf="@+id/Classtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>