<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/list_bg_1">

    <ImageView
        android:id="@+id/options"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="14dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/hl_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Heading"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/options"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ImageAhead"
        android:layout_width="36dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/books"
        app:layout_constraintBottom_toTopOf="@+id/hl_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/bookmark" />

    <View
        android:id="@+id/hl_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#4D000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/Heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/announcement"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hl_1"
        app:layout_constraintEnd_toStartOf="@+id/options"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/ImageAhead"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/adate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hl_1" />

    <ImageView
        android:id="@+id/imp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/important"
        android:src="@drawable/important"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/hl_1"
        app:layout_constraintStart_toStartOf="@+id/options"
        app:layout_constraintEnd_toEndOf="@+id/options"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>